--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
     */
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = 'https://EXAMPLE.disqus.com/embed.js';
+    s.src = 'https://web2-4inbalxyfs.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
 
 
 <!--Start of Tawk.to Script-->
@@ -58,7 +57,7 @@
   })();
   </script>
   <!--End of Tawk.to Script-->
-  
+
 </body>
 
 
